--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Waka Readme
 on:
   schedule:
     # Runs at 12am UTC
-    - cron: '1/3 * * * *'
+    - cron: '15 4 * * *'
 
 jobs:
   update-readme:
